# autolearn

./: .env.example  .envrc  .gitignore  .instructions  IMPLEMENTATION_COMPLETE.md  LICENSE.md  README.md  SKILL_COMPOSITION_SUMMARY.md  autolearn_success_demo.py  debug_consumer_agent.py  demo.py  demo_milestone4.py  demo_skill_composition.py  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  server.py  skills.db  test_harness.py  test_openai.py
.copilot/: step4-instructions.md  step4-results.md
.github/instructions/: step2-instructions.md
.github/results/: step4-results.md
.github/workflows/: static.yml
backend/: __init__.py  app.py  app.py.bak  app.py.new  consumer_agent.py  consumer_agent_endpoints.py  db.py  mcp_protocol.py  mcp_transport.py  openai_client.py  sandbox.py  schemas.py  session_endpoints.py  sessions.py  skill_engine.py  websocket.py
copilot-steps/: TODO.md  milestone-1.instructions  milestone-3.instructions  step3-instructions.md  step3-results.md
docs/: PRD.md
frontend/: package-lock.json  package.json
tests/: README.md  __init__.py  test_backend_basic.py  test_consumer_agent_basic.py  test_mcp_compliance.py  test_mcp_integration.py  test_mcp_proof.py  test_mcp_protocol.py  test_milestone2.py
tests/agent/: __init__.py  ai_analysis.py  autolearn_diagnosis.py  automatic_improvement.py  consumer_agent_skill_execution.py  conversation_context.py  full_agent.py  skill_error_handling.py  skill_prevention.py  skill_selection_debug.py
tests/integration/: __init__.py  frontend_chat_integration.py  (+4 more)
website/: index.html
(+21 files in other folders)
