[tool.poetry]
name = "autolearn"
version = "0.1.0"
description = "AutoLearn Milestone 2 - OpenAI Integration"
authors = ["autolearn"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.10"
openai = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
httpx = "^0.24.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
